# QueuePP

./: .gitignore  README.md  queues_draft.cpp
QueuePP/: CMakeLists.txt  Queues++.cmake
QueuePP/include/Queues++/: main_queue.hpp  queues.hpp  types.hpp
QueuePP/source/: Queues.cpp  background_thread_control_policy.cpp  background_thread_control_policy.hpp  control_policy.hpp  main_queue.cpp  main_thread_control_policy.cpp  main_thread_control_policy.hpp  queue_implementation.cpp  queue_implementation.hpp  store.cpp  store.hpp
QueuePP/tests/: CMakeLists.txt
QueuePP/tests/CL_Test_Example/: CL_Test_Example.cpp  CMakeLists.txt
QueuePP/tests/CacheService/: CMakeLists.txt  TestCacheService.cpp
QueuePP/tests/DataBaseProcessor_Test/: DataBaseProcessor_Test.cpp
QueuePP/tests/DataBaseProcessor_Test/base/: phonebook.sqlite3
QueuePP/tests/DataBaseProcessor_Test/sqlscripts/: add_phone.sql  create_contact_test.sql
QueuePP/tests/DataBaseProcessor_Test/vcards/: Frau Nachname0042 ZweiterVorname0042 Vorname0042.vcf  Vasia Pupkin.vcf  china.vcf  contacts2.vcf  full.vcf  noaddress.vcf  noname.vcf  photo.vcf  photo_uri.vcf  vCard2.1.vcf  vCard3.0.vcf  vCard4.0.vcf
QueuePP/tests/ImageConversionService/: CMakeLists.txt  GTest.cpp  Test.cpp  Test.hpp  main.cpp
QueuePP/tests/SharedMemoryDriver/: CMakeLists.txt  ClientForTest.cpp  TestForSHmem.hpp  TestForShmem.cpp
